--- a/index.html
+++ b/index.html
@@ -7,12 +7,12 @@
 		<!-- Add to homescreen for Safari on Ios -->
 		<meta name="apple-mobile-web-app-capable" content="yes">
 		<meta name="apple-mobile-web-app-status-bar-style" content="black">
-		<meta name="apple-mobile-web-app-title" content="Todo">
+		<meta name="apple-mobile-web-app-title" content="My Music">
 		<link rel="apple-touch-icon" href="logo.png">
 	
 		<!-- Add to homescreen for Chrome on Android -->
 		<meta name="mobile-web-app-capable" content="yes">
-		<meta name="application-name" content="Todo">
+		<meta name="application-name" content="My Music">
 		<meta name="theme-color" content="#2F3BA2">
 		<link rel="icon" sizes="192x192" href="logo.png">
 
@@ -28,10 +28,10 @@
 			<div class="zhe"></div>
 			<audio src="music/陈粒 - 大梦.mp3"></audio>
 			<img src="" alt="" class="pic"/>
-			<div class="zz"></div>
+			<div class="ti"></div>
 			<div class="header">
 				<div class="title">
-					<span class="jt" id="return"></span>
+					<span class="fan" id="fan"></span>
 					<div class="info">
 						<p class="name"></p>
 						<p class="author"></p>
@@ -52,9 +52,9 @@
 				</div>
 			</div>
 			
-			<!--lyric-->
+			<!--歌词-->
 			<div class="lyric">
-				<span id="quiet">&#xe827;</span>
+				<span id="mute">&#xe827;</span>
 				<div class="volume">
 					<div class="volume1">
 						<div class="volume2"></div>
@@ -72,8 +72,8 @@
 					<div class="time">
 						<div class="start">00:00</div>
 						<div class="process">
-							<div class="process1">
-								<div class="process2"></div>
+							<div class="tiao1">
+								<div class="tiao2"></div>
 								<div class="pi"></div>
 							</div>
 						</div>
@@ -81,9 +81,9 @@
 					</div>
 					<div class="info">
 						<a href="javascript:;" class="round">&#xe67a;</a>
-						<a href="javascript:;" class="back">&#xe600;</a>
+						<a href="javascript:;" class="prev"></a>
 						<a href="javascript:;" class="play">&#xe64b;</a>
-						<a href="javascript:;" class="forword">&#xe601;</a>
+						<a href="javascript:;" class="next"></a>
 						<a href="javascript:;" class="list"></a>
 					</div>
 				</div>
@@ -92,14 +92,17 @@
 	
 		
 	
-		<div class="playlist">
+		<div class="lists">
 			<div class="plays">
 				<span>播放列表 </span>
-				<!-- <span id="clear">清空</span> -->
+				<span id="clear"></span>
 			</div>
-			<ul id="playlist">
+			<ul id="lists">
 				
 			</ul>
-		</div>			<!--播放列表-->
+		</div>			
 	</body>
 </html>
+
+
+<!-- 清空 -->
